--- a/calculator.html
+++ b/calculator.html
@@ -39,6 +39,7 @@
 </body>
 <script>
 //    Построение правильного многоугольника: 360 делится на кол-во граней, получаем угол;
+    alert('new');
     let inputSegments=document.getElementById('inputSegments');
     let outputSegments=document.getElementById('outputSegments');
     let inputOutRad=document.getElementById('inputOutRad');
