--- a/calculator.html
+++ b/calculator.html
@@ -198,6 +198,7 @@ input[type=range]::-moz-range-thumb {
 <script src="FileSaver.js"></script>
 <script src="saveSvgAsPng.js"></script>
 <script>
+    alert(window.devicePixelRatio);
     let inputSegments=document.getElementById('inputSegments');
     let outputSegments=document.getElementById('outputSegments');
     let inputOutRad=document.getElementById('inputOutRad');
